@@ -94,7 +94,7 @@ option.
 .TP
 .B -c, --crop
 Crop the output image down. The image is shrunk so as to completely fill the
-bounding box in both axies, then any excess is cropped off. 
+bounding box in both axes, then any excess is cropped off. 
 
 .TP
 .B -d, --delete
