@@ -4,6 +4,7 @@
   constant image
 - add new_from_image() to Python as well
 - slight change to cpp new_from_image() to match py/C behaviour
+- add FORCE resize mode to break aspect ratio
 
 23/4/17 started 8.5.5
 - doc polishing
